--- a/submission/presentation.html
+++ b/submission/presentation.html
@@ -302,6 +302,14 @@ Linear and quadratic deviations from the base-case scenario of constant relative
 <li>Use differences of observed outcomes within pairs as &ldquo;observed benefit&rdquo;</li>
 <li>Fit smooth calibration curve</li>
 <li>Calculate the <footnote content="Austin, PC, Steyerberg, EW. The Integrated Calibration Index (ICI) and related metrics for quantifying the calibration of logistic regression models. <em>Statistics in Medicine<em>. 2019; 38: 4051– 4065.">integrated calibration index</footnote></li>
+</ul>
+
+</article></slide><slide class=""><hgroup><h2>Simulations</h2></hgroup><article  class="smaller " id="simulations">
+
+<ul>
+<li>Total of 66 scenarios</li>
+<li>Replicate each scenario 1000 times</li>
+<li>For each scenario, evaluations are made on a super-population of 500,000</li>
 </ul></article></slide>
 
 
